--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="./index.css">
 
-        <script src="https://d3js.org/d3.v3.min.js"></script>
+        <script src="https://d3js.org/d3.v4.min.js"></script>
     </head>
 
     <body>
         <h1 id='title'>Movie Sales</h1>
         <div id='description'>Biggest movie sales ever by genre</div>
 
-        <svg />
+        <svg id='map'></svg>
+        <svg id='legend' width="500"></svg>
 
         <script type="text/javascript" src="map.js"></script>
+        <script type="text/javascript" src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     </body>
 </html>
